Fixes width of from and to dropdowns in extension and on mobile views.

--- a/ui/app/css/itcss/components/send.scss
+++ b/ui/app/css/itcss/components/send.scss
@@ -577,6 +577,7 @@
     line-height: 16px;
     font-size: 12px;
     color: $tundora;
+    position: relative;
 
     &__close-area {
       position: fixed;
@@ -591,7 +592,7 @@
       z-index: 1050;
       position: absolute;
       height: 220px;
-      width: 240px;
+      width: 100%;
       border: 1px solid $geyser;
       border-radius: 4px;
       background-color: $white;
